refactored base.html code, removing unnecessary classes

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
   <body>
     <header>
       <nav>
-        <div class="nav-wrapper fire_opal">
-          <a href="{{url_for('home')}}" class="brand-logo nav_home center"
+        <div class="nav-wrapper">
+          <a href="{{url_for('home')}}" class="brand-logo center"
             >Dance Your Way</a
           >
           <a href="#" data-activates="mobile-demo" class="button-collapse"
