--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     {% extends 'base.html' %} {% block content %}
+    <div class="hero">
+    <div class="hero-content"></div>
+    </div>
     {% endblock %}
   </body>
 </html>
