--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dance Your Way | Home</title>
-  </head>
-  <body>
-    {% extends 'base.html' %} {% block content %}
-    <div class="hero">
-    <div class="hero-content"></div>
-    </div>
-    {% endblock %}
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+<div class="hero">
+  <div class="hero-content center">
+    <h1>
+      Dance Your Way
+    </h1>
+    <h5>
+      In Association With Gusto
+    </h5>
+  </div>
+</div>
+{% endblock %}
