--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,17 @@
 nav, nav ul a {
   height: 8vh
 }
+
+.hero {
+  height: 92vh;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(10, 10, 10, 0) 0%,
+      rgba(10, 10, 10, 0) 50%,
+      rgba(10, 10, 10, 0.7) 100%
+    ),
+    url("https://wallpapercave.com/wp/wp2570965.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
