--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,68 @@
 {% extends 'base.html' %} {% block content %}
 <div class="hero">
+  <!-- <video
+    autoplay
+    muted
+    loop
+    src="{{url_for('static', filename='Caramba Final (1).mp4')}}"
+  ></video> -->
   <div class="hero-content center">
-    <h1>
-      Dance Your Way
-    </h1>
-    <h5>
-      In Association With Gusto
-    </h5>
+    <h1>Dance Your Way</h1>
+    <h3>In Association with GUSTO</h3>
   </div>
+</div>
+<div class="container">
+  {% for event in events %}
+  <div class="row">
+    <div class="col s6 m4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img
+            class="activator"
+            src="{{event.event_image}}"
+            alt="{{event.event_name}} event image"
+          />
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">
+            <h4>{{event.event_name}}</h4>
+            <strong>{{event.weekday}}</strong> - {{event.time}}
+            <br />
+            Dance Styles:
+            <ul>
+              {% if event.salsa == true %}
+              <li>Salsa</li>
+              {% else %} {% endif %} {% if event.bachata == true %}
+              <li>Bachata</li>
+              {% else %} {% endif %} {% if event.kizomba == true %}
+              <li>Kizomba</li>
+              {% else %} {% endif %}
+            </ul>
+            <a class="btn-floating halfway-fab waves-effect waves-light red"
+              ><i class="material-icons right">add</i></a
+            ></span
+          >
+          <p>
+            <a href="{{event.event_link}}" target="_blank">See event</a>
+          </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"
+            >{{event.event_name}}<i class="material-icons right">close</i></span
+          >
+          <p>
+            {{event.event_description}}
+          </p>
+          <p>
+            {{event.price}}
+          </p>
+          <p>
+            {{event.address}}
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
 </div>
 {% endblock %}
