--- a/templates/base.html
+++ b/templates/base.html
@@ -31,16 +31,21 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="{{url_for('get_events')}}">Where to Dance</a></li>
             <li>
-              <a href="">About Gusto</a>
+              <a href="">About Us</a>
             </li>
             <li>
               <a href="">Contact Us</a>
             </li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
+            <li>
+              <a class="sidenav-close" href="#!"
+                ><i class="material-icons">close</i></a
+              >
+            </li>
             <li><a href="{{url_for('get_events')}}">Where to Dance</a></li>
             <li>
-              <a href="">About Gusto</a>
+              <a href="">About Us</a>
             </li>
             <li>
               <a href="">Contact Us</a>
@@ -82,7 +87,12 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $(".collapsible").collapsible();
-        $(".button-collapse").sideNav();
+        $(".button-collapse").sideNav({
+          edge: "left",
+          closeOnClick: true,
+          draggable: true,
+        });
+        $(".scrollspy").scrollSpy();
       });
     </script>
   </body>
