--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,34 @@
     loop
     src="{{url_for('static', filename='Caramba Final (1).mp4')}}"
   ></video> -->
-  <div class="hero-content center">
+  <div class="hero-content center white-text">
     <h1>Dance Your Way</h1>
     <h3>In Association with GUSTO</h3>
+    <br />
+    <div class="row center container">
+      <div class="col s12 m6">
+        <a href="#" class="btn-large waves-effect waves-light waves-ripple">
+          Contact Us
+        </a>
+      </div>
+      <div class="col s12 m6">
+        <a
+          href="{{url_for('get_events')}}"
+          class="btn-large waves-effect waves-light waves-ripple"
+        >
+          Find Events
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="center today-link">
+    <a href="#today" class="btn">
+      What's On Today <br />
+      <i class="large material-icons">arrow_downward</i>
+    </a>
   </div>
 </div>
+<h1 id="today" class="center section scrollspy">Today's Events</h1>
 <div class="container">
   {% for event in events %}
   <div class="row">
@@ -26,9 +49,11 @@
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">
             <h4>{{event.event_name}}</h4>
-            <strong>{{event.weekday}}</strong> - {{event.time}}
+            <strong>{{event.weekday}}:</strong> {{event.time}}
             <br />
-            Dance Styles:
+            <strong>
+              Dance Styles:
+            </strong>
             <ul>
               {% if event.salsa == true %}
               <li>Salsa</li>
