added style.html with placeholder images

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
-            <li><a href="{{url_for('get_events')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
             <li>
               <a href="">About Us</a>
             </li>
@@ -43,7 +43,7 @@
                 ><i class="material-icons">close</i></a
               >
             </li>
-            <li><a href="{{url_for('get_events')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
             <li>
               <a href="">About Us</a>
             </li>
