--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,19 +27,29 @@
 
 .hero-content {
   position: relative;
-  top: 20vh
+  top: 20vh;
 }
 
-.hero-content h1, .hero-content h3{
+.hero-content h1,
+.hero-content h3 {
   line-height: 1.5;
-  margin: 0 auto
-} 
+  margin: 0 auto;
+}
 
 .today-link {
   position: relative;
-  bottom: -30vh
+  bottom: -30vh;
 }
 
 ul {
-  margin: 0
+  margin: 0;
+}
+
+.pick-your-style {
+  margin: 0;
+  padding: 0 !important;
+}
+
+.pick-your-style img {
+  width: 100%
 }
