--- a/templates/events.html
+++ b/templates/events.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
-  {% for event in events %}
   <div class="row">
-    <div class="col s6 m4">
+  {% for event in events %}
+    <div class="col s6 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img
@@ -52,7 +52,8 @@
         </div>
       </div>
     </div>
-  </div>
+
   {% endfor %}
+    </div>
 </div>
 {% endblock %}
