--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,11 @@
     <br />
     <div class="row center container">
       <div class="col s12 m6">
-        <a href="#" class="btn-large waves-effect waves-light waves-ripple">
-          Contact Us
+        <a
+          href="{{url_for('add_event')}}"
+          class="btn-large waves-effect waves-light waves-ripple"
+        >
+          Add Your Event
         </a>
       </div>
       <div class="col s12 m6">
@@ -29,8 +32,8 @@
 </div>
 <h1 id="today" class="center section scrollspy">Today's Events</h1>
 <div class="container">
-  {% for event in events %}
   <div class="row">
+    {% for event in events %}
     <div class="col s6 m4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
@@ -81,7 +84,7 @@
         </div>
       </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
 </div>
 {% endblock %}
