--- a/templates/add-event.html
+++ b/templates/add-event.html
@@ -1,57 +1,93 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row center container">
-  <h3>Add Event</h3>
-  <form class="col s12">
+  <h3>Add Your Event</h3>
+  <form
+    action="{{url_for('insert_event')}}"
+    method="POST"
+    class="col s12"
+    id="add-event"
+  >
     <div class="row">
       <div class="input-field col s12 m4 l4">
-        <input value="" id="username" type="text" class="validate" />
-        <label class="active" for="username">Username</label>
+        <input
+          value=""
+          id="name"
+          name="name"
+          type="text"
+          class="validate"
+        />
+        <label class="active" for="name">Your Name</label>
       </div>
       <div class="input-field col s12 m4 l4">
-        <input value="" id="event_name" type="text" class="validate" />
+        <input
+          value=""
+          id="event_name"
+          name="event_name"
+          type="text"
+          class="validate"
+        />
         <label class="active" for="event_name">Event Name</label>
       </div>
       <div class="input-field col s12 m4 l4">
-        <input value="" id="address" type="text" class="validate" />
+        <input
+          value=""
+          id="address"
+          name="address"
+          type="text"
+          class="validate"
+        />
         <label class="active" for="address">Event Address</label>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12 m8">
-        <textarea id="textarea1" class="materialize-textarea"></textarea>
-        <label for="textarea1">Event Description</label>
+        <textarea
+          id="event_description"
+          name="event_description"
+          class="materialize-textarea validate"
+        ></textarea>
+        <label class="active" for="event_description">Event Description</label>
       </div>
       <div class="input-field col s12 m4">
-        <input value="" id="event_link" type="text" class="validate" />
+        <input
+          value="www."
+          id="event_link"
+          name="event_link"
+          type="text"
+          class="validate"
+        />
         <label class="active" for="event_link">Event Social Link</label>
       </div>
     </div>
     <h5>Dance Styles</h5>
     <br />
     <div class="row">
-      <div class="col s4">
+      <div class="col s4 switch">
         <label>
-          <input type="checkbox" />
-          <span class="checkbox-span">Salsa</span>
+          <input type="checkbox" name="salsa" id="salsa" />
+          <span class="lever"></span>
+          Salsa
         </label>
       </div>
-      <div class="col s4">
+      <div class="col s4 switch">
         <label>
-          <input type="checkbox" />
-          <span class="checkbox-span">Bachata</span>
+          <input type="checkbox" name="bachata" id="bachata" />
+          <span class="lever"></span>
+          Bachata
         </label>
       </div>
-      <div class="col s4">
+      <div class="col s4 switch">
         <label>
-          <input type="checkbox" />
-          <span class="checkbox-span">Kizomba</span>
+          <input type="checkbox" name="kizomba" id="kizomba" />
+          <span class="lever"></span>
+          Kizomba
         </label>
       </div>
     </div>
     <div class="row">
       <div class="col s12 m6 l4">
         <div class="input-field col s12">
-          <select multiple>
+          <select name="weekday" id="weekday">
             <option value="Monday">Monday</option>
             <option value="Tuesday">Tuesday</option>
             <option value="Wednesday">Wednesday</option>
@@ -64,24 +100,31 @@
         </div>
       </div>
       <div class="col s12 m6 l4">
-        <label class="active" for="time"
-          >Time<input type="text" id="time" class="timepicker"
-        /></label>
+        <label class="active" for="time">Time</label
+        ><input type="text" name="time" id="time" class="timepicker validate" />
       </div>
       <div class="input-field col s12 l4">
-        <input value="" id="price" type="text" class="validate" />
+        <textarea
+          id="price"
+          name="price"
+          class="materialize-textarea validate"
+        ></textarea>
         <label class="active" for="price">Ticket Prices</label>
       </div>
     </div>
     <div class="file-field input-field">
       <div class="btn">
         <span>Event Image</span>
-        <input type="file" />
+        <input type="file" name="event_image" id="event_image" />
       </div>
       <div class="file-path-wrapper">
         <input class="file-path validate" type="text" />
       </div>
     </div>
+    <button class="btn waves-effect waves-light" type="submit" name="action">
+      Add Your Event
+      <i class="material-icons right">playlist_add</i>
+    </button>
   </form>
 </div>
 {% endblock %}
