--- a/templates/events.html
+++ b/templates/events.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
   <div class="row">
-  {% for event in events %}
+    {% for event in events %}
     <div class="col s6 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
@@ -20,11 +20,11 @@
               Dance Styles:
             </strong>
             <ul>
-              {% if event.salsa == true %}
+              {% if event.salsa == 'on' %}
               <li>Salsa</li>
-              {% else %} {% endif %} {% if event.bachata == true %}
+              {% else %} {% endif %} {% if event.bachata == 'on' %}
               <li>Bachata</li>
-              {% else %} {% endif %} {% if event.kizomba == true %}
+              {% else %} {% endif %} {% if event.kizomba == 'on' %}
               <li>Kizomba</li>
               {% else %} {% endif %}
             </ul>
@@ -33,27 +33,53 @@
             ></span
           >
           <p>
-            <a href="{{event.event_link}}" target="_blank">See event</a>
+            <a href="https://{{event.event_link}}" target="_blank">See event</a>
           </p>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4"
-            >{{event.event_name}}<i class="material-icons right">close</i></span
-          >
-          <p>
-            {{event.event_description}}
-          </p>
-          <p>
-            {{event.price}}
-          </p>
-          <p>
-            {{event.address}}
-          </p>
+          <span class="card-title">
+            <i class="material-icons right">close</i>
+          </span>
+          <h4>
+            {{event.event_name}}
+          </h4>
+          <div class="row">
+            <p class="col s4">
+              Description:
+            </p>
+            <p class="col s8">
+              {{event.event_description}}
+            </p>
+          </div>
+          <div class="row">
+            <p class="col s4">
+              Price:
+            </p>
+            <p class="col s8">
+              {{event.price}}
+            </p>
+          </div>
+          <div class="row">
+            <p class="col s4">
+              Address:
+            </p>
+            <p class="col s8">
+              {{event.address}}
+            </p>
+          </div>
+          <div class="row">
+            <p class="col s4">
+              Organiser:
+            </p>
+            <p class="col s8">
+              {{event.username}}
+            </p>
+          </div>
         </div>
       </div>
     </div>
 
-  {% endfor %}
-    </div>
+    {% endfor %}
+  </div>
 </div>
 {% endblock %}
