--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -1,48 +1,7 @@
 {% extends 'base.html' %} {% block content %}
-<div class="hero">
-  <div class="hero-content center white-text">
-    <h1>Dance Your Way</h1>
-    <h3>In Association with GUSTO</h3>
-    <br />
-    <div class="row center container">
-      <div class="col s12 m6">
-        <a
-          href="{{url_for('add_event')}}"
-          class="btn-large waves-effect waves-light waves-ripple"
-        >
-          Add Your Event
-        </a>
-      </div>
-      <div class="col s12 m6">
-        <a
-          href="{{url_for('get_salsa_events')}}"
-          class="btn-large waves-effect waves-light waves-ripple"
-        >
-          Find Events
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="center today-link">
-    <a href="#today" class="btn">
-      What's On Today <br />
-      <i class="large material-icons">arrow_downward</i>
-    </a>
-  </div>
-</div>
-<video
-  id="hero-video"
-  preload="auto"
-  autoplay
-  loop
-  muted
-  src="{{url_for('static', filename='images/Caramba Final (1).mp4')}}"
-></video>
-<section>
-  <h1 id="today" class="center section scrollspy">Today's Events</h1>
-  <div class="container">
-    <div class="row">
-      {% for event in events %}
+<div class="container">
+  <div class="row">
+    {% for event in events%} {% if event.salsa == 'on' %}
     <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
@@ -119,8 +78,24 @@
         </div>
       </div>
     </div>
-    {% endfor %}
-    </div>
+    {% endif %} {% endfor %}
   </div>
-</section>
+</div>
+<div class="row container center">
+  <h5>Other Styles:</h5>
+  <div class="col s6">
+    <a
+      href="{{url_for('get_bachata_events')}}"
+      class="btn-large waves-effect waves-light waves-ripple"
+      >Bachata Events</a
+    >
+  </div>
+  <div class="col s6">
+    <a
+      href="{{url_for('get_kizomba_events')}}"
+      class="btn-large waves-effect waves-light waves-ripple"
+      >Kizomba Events</a
+    >
+  </div>
+</div>
 {% endblock %}
