--- a/templates/style.html
+++ b/templates/style.html
@@ -1,29 +1,34 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row">
-  <div class="col s4 pick-your-style">
-    <img
-      src="{{url_for('static', filename='images/adrian-y-anita-1.jpg')}}"
-      alt="adrian y anita"
-    />
+  <div class="col s4 pick-your-style" id="salsa-picker">
+    <h1 class="white-text center">Salsa</h1>
+    <div class="center events-button">
+    <a
+      href="{{url_for('get_salsa_events')}}"
+      class="btn-large waves-effect waves-light waves-ripple"
+      >Find Your Events</a
+    >
   </div>
-  <div class="col s4 pick-your-style">
-    <img
-      src="{{url_for('static', filename='images/ataca-y-la-alemana-1.jpg')}}"
-      alt="ataca y la alemana"
-    />
   </div>
-  <div class="col s4 pick-your-style">
-    <img
-      src="{{url_for('static', filename='images/lokito-y-oksana-1.jpg')}}"
-      alt="lokito y oksana"
-    />
+  <div class="col s4 pick-your-style" id="bachata-picker">
+    <h1 class="white-text center">Bachata</h1>
+    <div class="center events-button">
+    <a
+      href="{{url_for('get_bachata_events')}}"
+      class="btn-large waves-effect waves-light waves-ripple"
+      >Find Your Events</a
+    >
   </div>
+  </div>
+  <div class="col s4 pick-your-style" id="kizomba-picker">
+    <h1 class="white-text center">Kizomba</h1>
+    <div class="center events-button">
+    <a
+      href="{{url_for('get_kizomba_events')}}"
+      class="btn-large waves-effect waves-light waves-ripple"
+      >Find Your Events</a
+    >
+  </div>
+  </div>
+  {% endblock %}
 </div>
-<div class="center">
-  <a
-    href="{{url_for('get_events')}}"
-    class="btn-large waves-effect waves-light waves-ripple"
-    >Find Your Events</a
-  >
-</div>
-{% endblock %}
