style selector mobile responsive. index button redirected to style rather than salsa events page

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col s12 m6">
         <a
-          href="{{url_for('get_salsa_events')}}"
+          href="{{url_for('style')}}"
           class="btn-large waves-effect waves-light waves-ripple"
         >
           Find Events
