--- a/templates/style.html
+++ b/templates/style.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row">
-  <div class="col s4 pick-your-style" id="salsa-picker">
+  <div class="col s12 m4 pick-your-style" id="salsa-picker">
     <h1 class="white-text center">Salsa</h1>
     <div class="center events-button">
     <a
@@ -10,7 +10,7 @@
     >
   </div>
   </div>
-  <div class="col s4 pick-your-style" id="bachata-picker">
+  <div class="col s12 m4 pick-your-style" id="bachata-picker">
     <h1 class="white-text center">Bachata</h1>
     <div class="center events-button">
     <a
@@ -20,7 +20,7 @@
     >
   </div>
   </div>
-  <div class="col s4 pick-your-style" id="kizomba-picker">
+  <div class="col s12 m4 pick-your-style" id="kizomba-picker">
     <h1 class="white-text center">Kizomba</h1>
     <div class="center events-button">
     <a
