--- a/templates/base.html
+++ b/templates/base.html
@@ -20,27 +20,27 @@
   </head>
   <body>
     <header>
-        <nav>
-          <div class="nav-wrapper">
-            <a href="{{url_for('home')}}" class="brand-logo center"
-              >Dance Your Way</a
-            >
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-              ><i class="material-icons">menu</i></a
-            >
-            <ul class="right hide-on-med-and-down">
-              <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-              <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-              <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
-            </ul>
-          </div>
-        </nav>
+      <nav>
+        <div class="nav-wrapper">
+          <a href="{{url_for('home')}}" class="brand-logo center"
+            >Dance Your Way</a
+          >
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+          <ul class="right hide-on-med-and-down">
+            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+            <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
+          </ul>
+        </div>
+      </nav>
 
-        <ul class="sidenav" id="mobile-demo">
-          <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-          <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-          <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
-        </ul>
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="{{url_for('style')}}">Where to Dance</a></li>
+        <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+        <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
+      </ul>
     </header>
     {% block content %} {% endblock %}
     <footer class="page-footer">
@@ -79,7 +79,7 @@
         $("select").formSelect();
         $(".timepicker").timepicker();
         $(
-          "#name,#event_name,#address,#event_link,#salsa,#bachata,#kizomba,#time,#weekday"
+          "#name,#event_name,#address,#event_image_s3,#salsa,#bachata,#kizomba,#time,#weekday"
         ).on("keypress", function (event) {
           var keyPressed = event.keyCode || event.which;
           if (keyPressed === 13) {
@@ -88,6 +88,14 @@
           }
         });
       });
+      document
+        .getElementById("event_image_s3")
+        .addEventListener("input", function () {
+          let event_image_s3 = document.getElementById("event_image_s3").value.replace(/C:\\Fakepath\\/i, '');
+          console.log(event_image_s3);
+          document.getElementById("event_image").value = event_image_s3;
+          console.log(document.getElementById("event_image").event_image_s3);
+        });
     </script>
   </body>
 </html>
