--- a/templates/add-event.html
+++ b/templates/add-event.html
@@ -126,7 +126,7 @@
         class="validate"
       />
     </div>
-    <button class="btn waves-effect waves-light" type="submit" name="action">
+    <button class="btn waves-effect waves-light" type="submit">
       Add Your Event
       <i class="material-icons right">playlist_add</i>
     </button>
