--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="{{url_for('style')}}">Where to Dance</a></li>
             <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-            <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
+            <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
           </ul>
         </div>
       </nav>
@@ -39,7 +39,7 @@
       <ul class="sidenav" id="mobile-demo">
         <li><a href="{{url_for('style')}}">Where to Dance</a></li>
         <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-        <li><a href="{{url_for('add_event')}}">Log In/Sign Up</a></li>
+        <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
       </ul>
     </header>
     {% block content %} {% endblock %}
