--- a/templates/base.html
+++ b/templates/base.html
@@ -1,79 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="{{url_for('static', filename='css/style.css')}}"
-      type="text/css"
-    />
-    <title>Dance Your Way</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="nav-wrapper">
-          <a href="{{url_for('home')}}" class="brand-logo center"
-            >Dance Your Way</a
-          >
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-            ><i class="material-icons">menu</i></a
-          >
-          <ul class="right hide-on-med-and-down">
-            <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-            <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-            <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
-          </ul>
-        </div>
-      </nav>
 
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="{{url_for('style')}}">Where to Dance</a></li>
-        <li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
-        <li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
-      </ul>
-    </header>
-    {% block content %} {% endblock %}
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Social Media</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-          © 2020 Copyright Dance Your Way
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-      </div>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+	<title>Dance Your Way</title>
+</head>
+
+<body>
+	<header>
+		<nav>
+			<div class="nav-wrapper">
+				<a href="{{url_for('home')}}" class="brand-logo center">Dance Your Way</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="{{url_for('style')}}">Where to Dance</a></li>
+					<li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+					<li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<ul class="sidenav" id="mobile-demo">
+			<li><a href="{{url_for('style')}}">Where to Dance</a></li>
+			<li><a href="{{url_for('add_event')}}">Add Your Event</a></li>
+			<li><a href="{{url_for('signup')}}">Log In/Sign Up</a></li>
+		</ul>
+	</header>
+
+	{% for message in get_flashed_messages() %}
+	<div class="alert-error">Message: {{ message }}</div>
+	{% endfor %}
+
+	{% block content %} {% endblock %}
+	<footer class="page-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12">
+					<h5 class="white-text">Footer Content</h5>
+					<p class="grey-text text-lighten-4">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					</p>
+				</div>
+				<div class="col l4 offset-l2 s12">
+					<h5 class="white-text">Social Media</h5>
+					<ul>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+						<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container">
+				© 2020 Copyright Dance Your Way
+				<a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+			</div>
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function () {
         $(".sidenav").sidenav();
         $(".scrollspy").scrollSpy();
         $("select").formSelect();
@@ -96,6 +89,7 @@
           document.getElementById("event_image").value = event_image_s3;
           console.log(document.getElementById("event_image").event_image_s3);
         });
-    </script>
-  </body>
+	</script>
+</body>
+
 </html>
