added flash message for username already exists and redirected back to signup page. Flash message styling similar to bootstrap warning alert

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 	</header>
 
 	{% for message in get_flashed_messages() %}
-	<div class="alert-error">Message: {{ message }}</div>
+	<div class="alert-error center">Message: {{ message }}</div>
 	{% endfor %}
 
 	{% block content %} {% endblock %}
