--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,8 +9,11 @@
 
 .alert-error {
   padding: 8px;
-  background-color: red;
-  color: white;
+  background-color: #fff3cd;
+  color: #856404;
+  border-color: #ffeeba;
+  border-radius: .25rem;
+  border: 1px solid transparent;
 }
 
 .card {
