--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,21 +1,36 @@
 {% extends 'base.html' %} {% block content %}
 <div class="row center container">
-	<h3>Add Your Event</h3>
-	<form action="{{url_for('adduser')}}" method="POST" class="col s12" id="signup">
-		<div class="row">
-			<div class="input-field col s12 m4 l4">
-				<input value="" id="username" name="username" type="text" class="validate" />
-				<label class="active" for="username">Userame</label>
+	<div class="col s12 m6">
+		<h3>Sign Up</h3>
+		<form action="{{url_for('adduser')}}" method="POST" class="col s12" id="signup">
+			<div class="row">
+				<div class="input-field col s12">
+					<input value="" id="username" name="username" type="text" class="validate" />
+					<label class="active" for="username">Userame</label>
+				</div>
+				<div class="input-field col s12">
+					<input value="" id="password" name="password" type="password" class="validate" />
+					<label class="active" for="password">Password</label>
+				</div>
 			</div>
-			<div class="input-field col s12 m4 l4">
-				<input value="" id="password" name="password" type="password" class="validate" />
-				<label class="active" for="password">Password</label>
+			<button class="btn waves-effect waves-light" type="submit">Sign Up<i class="material-icons right">playlist_add</i></button>
+		</form>
+	</div>
+	<div class="col s12 m6">
+		<h3>Log In</h3>
+		<form action="{{url_for('login')}}" method="POST" class="col s12" id="login">
+			<div class="row">
+				<div class="input-field col s12">
+					<input value="" id="login_username" name="login_username" type="text" class="validate" />
+					<label class="active" for="login_username">Username</label>
+				</div>
+				<div class="input-field col s12">
+					<input value="" id="login_password" name="login_password" type="password" class="validate" />
+					<label class="active" for="login_password">Password</label>
+				</div>
 			</div>
-		</div>
-		<button class="btn waves-effect waves-light" type="submit">
-      Add Your Event
-      <i class="material-icons right">playlist_add</i>
-    </button>
-	</form>
+			<button class="btn waves-effect waves-light" type="submit">Login<i class="material-icons right">arrow_right</i></button>
+		</form>
+	</div>
 </div>
 {% endblock %}
