--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,6 +5,10 @@
 		<form action="{{url_for('adduser')}}" method="POST" class="col s12" id="signup">
 			<div class="row">
 				<div class="input-field col s12">
+					<input value="" id="email" name="email" type="email" class="validate" />
+					<label class="active" for="username">Email</label>
+				</div>
+				<div class="input-field col s12">
 					<input value="" id="username" name="username" type="text" class="validate" />
 					<label class="active" for="username">Userame</label>
 				</div>
