added link to organiser information on event cards. hidden username on add event form and automatically pull in session username, reordered add event form. added organiser.html with basic organiser database information. fixed signup bug where email label was pointing to username instead

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,11 +6,11 @@
 			<div class="row">
 				<div class="input-field col s12">
 					<input value="" id="email" name="email" type="email" class="validate" />
-					<label class="active" for="username">Email</label>
+					<label class="active" for="email">Email</label>
 				</div>
 				<div class="input-field col s12">
 					<input value="" id="username" name="username" type="text" class="validate" />
-					<label class="active" for="username">Userame</label>
+					<label class="active" for="username">Username</label>
 				</div>
 				<div class="input-field col s12">
 					<input value="" id="password" name="password" type="password" class="validate" />
